<resources>
    <string name="app_name">FortuneTeller</string>
    <string name="action_settings">Settings</string>
    <string name="fortune_text_label">Fortune Text:</string>
    <string name="cancel_button">Cancel</string>
    <string name="fortune_number_label">Fortune Number:</string>
    <string name="save_button">Save</string>
    <string name="custom_fortune_hint">All your dreams will come true</string>
    <string name="fortune_default_placeholder">your fortune</string>
    <string name="play_again_button">Play again</string>
    <string name="start_button">Start</string>
    <string name="welcome_text">Welcome</string>
    <string name="red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="notification_button">notification</string>


    <string-array name="listArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <string-array name="number_spinner">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
    </string-array>


</resources>
